# waveseer

./: .coverage  .env  .env.example  .eslintrc.json  .pre-commit-config.yaml  .windsurfrules  =3.5.0  Dockerfile  Dockerfile.chart  Dockerfile.dev  Makefile  README.md  WINDSURFER_INTEGRATION.md  config.yml  docker-compose.yml  env.yml  environment.yml  lint_report.md  motifs.db  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_lint_fixer.py  setup.py  setup_test_db.py  sys_path_debug.txt  test_all.py  ui_server.py
.github/: PULL_REQUEST_TEMPLATE.md
.windsurfer/: _wave.md  scratchpad.md
data/: index.json  sample_index.json
docker/: README.md
docs/: api_reference.md  getting_started.md  linting.md  pattern_detection_guide.md  python_migration.md  real_time_seeragent_architecture.md
examples/: hyperparam_search_example.py  model_benchmark_example.py  model_export_example.py  pattern_visualization_demo.ipynb
scripts/: benchmark_detection.py  collect_csvs.py  csv_to_parquet.py  load_test.js  replay_data.py  sample_data.py  setup_hooks.py  test-e2e-load.sh  test-helm.sh  test-kind.sh  test-load.sh  test_chart_service.sh  verify_pytorch.py
tests/: README.md  chart_mock_helpers.py  conftest.py  debug_chart_service.py  enhanced_test_chart_service.py  test_api.py  test_api_contract.py  test_api_patterns.py  test_chart.py  test_chart_integration.py  test_chart_service.py  test_cli.py  test_cli_crypto.py  test_cluster_unit.py  test_crypto_api.py  test_docker_compose_config.py  test_health.py  test_http_static.py  test_ingest.py  test_ingest_error_handling.py  test_ingest_pipeline.py  test_ingest_stream.py  test_integration.py  test_metrics.py  test_model_export.py  test_multi_symbol_integration.py  test_pattern_dataset.py  test_pattern_models.py  test_pattern_training.py  test_pattern_visualization.py  test_patterns.py  test_scan_parallel.py  test_seer_cli.py  test_startup_seer.py  test_streaming_ws.py  test_tensorboard_utils.py  test_ui_e2e.py  test_ui_page.py  test_ui_patterns.py  test_ui_reconnect.py  (+4 more)
wave/: __init__.py  __main__.py  chart.py  chart_service.py  cluster.py  indicators.py  ingest.py  pattern_stub.py  patterns.py  scan.py  seer.py  test_broadcast.py  test_data_replay.py  test_detection_on_sample.py  test_http.py  test_metrics.py  test_startup_seer.py  test_ui_e2e.py  test_ws.py  (+7 more)
(+197 files in other folders)
